# Cyber_Runner

./: CMakeLists.txt  gestor de economia y persistencia
include/core/: Game.h
include/data/: DataManager.h  PlayerData.h
include/entities/: Coin.h  Obstacle.h  Player.h
include/ui/: HUD.h
src/: main.cpp
src/core/: Game.cpp
src/data/: DataManager.cpp
src/entities/: Coin.cpp  Obstacle.cpp  Player.cpp
src/ui/: HUD.cpp
